--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,11 @@
         "concepts": "cpp",
         "memory": "cpp",
         "type_traits": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__tree": "cpp",
+        "map": "cpp",
+        "queue": "cpp",
+        "unordered_set": "cpp",
+        "functional": "cpp"
     }
 }
